fixed mobile spacing

--- a/CSS/home.css
+++ b/CSS/home.css
@@ -180,7 +180,7 @@ body {
 
     .social-media {
         font-size: 1.1vh;
-        margin-top: -48vh;
+        margin-top: -44vh;
     }
 
     .social-media a {
